remember last dir in img load dialog